@@ -43,7 +43,7 @@ namespace Migo.Syndication.Data
         IEnumerable<IFeedItemWrapper> Items { get; }
         string Language { get; }
         DateTime LastBuildDate { get; }
-        FEEDS_DOWNLOAD_ERROR LastDownloadError { get; }
+        FeedDownloadError LastDownloadError { get; }
         DateTime LastDownloadTime { get; }      
         DateTime LastWriteTime { get; }
         string Link { get; }
